<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_user">

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.ecoventur.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_transit"
        android:name="com.example.ecoventur.ui.transit.TransitFragment"
        android:label="@string/title_transit"
        tools:layout="@layout/fragment_transit" />

    <fragment
        android:id="@+id/navigation_greenspace"
        android:name="com.example.ecoventur.ui.greenspace.GreenSpaceFragment"
        android:label="@string/title_greenspace"
        tools:layout="@layout/fragment_greenspace" />

    <fragment
        android:id="@+id/navigation_ecoeducation"
        android:name="com.example.ecoventur.ui.ecoeducation.EcoEducationFragment"
        android:label="@string/title_ecoeducation"
        tools:layout="@layout/fragment_ecoeducation" />

    <fragment
        android:id="@+id/navigation_ecorewards"
        android:name="com.example.ecoventur.ui.ecorewards.EcoRewardsFragment"
        android:label="@string/title_ecorewards"
        tools:layout="@layout/fragment_ecorewards" />
</navigation>